--- a/.github/workflows/request_approval.yml
+++ b/.github/workflows/request_approval.yml
@@ -15,14 +15,14 @@ jobs:
       - name: Request approval
         uses: actions/github-script@v6
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.WORKFLOW_SECRET }}
           script: |
-            const { data: pullRequest } = await github.pulls.get({
+            const { data: pullRequest } = await octokit.rest.pulls.get({
               owner: context.repo.owner,
               repo: context.repo.repo,
               pull_number: context.payload.pull_request.number
             });
-            const { data: reviews } = await github.pulls.listReviews({
+            const { data: reviews } = await octokit.rest.pulls.listReviews({
               owner: context.repo.owner,
               repo: context.repo.repo,
               pull_number: context.payload.pull_request.number
@@ -35,3 +35,4 @@ jobs:
             } else {
               console.log('PR not ready to deploy');
             }
+          result-encoding: string
