--- a/.github/workflows/automerge_on_dependabot_pr.yml
+++ b/.github/workflows/automerge_on_dependabot_pr.yml
@@ -27,3 +27,46 @@ jobs:
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
           GITHUB_TOKEN: ${{secrets.WORKFLOW_SECRET}}
+
+  ChangeLog_Enforcer:
+    runs-on: ubuntu-latest
+    needs: [dependabot]
+
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the
+      # updated CHANGELOG back to the repository.
+      # https://github.blog/changelog/2023-02-02-github-actions-updating-the-default-github_token-permissions-to-read-only/
+      contents: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          ref: main
+
+      - name: Get latest version
+        id: get_latest_version
+        run: |
+          git fetch --tags
+          latest_tag=$(git describe --tags $(git rev-list --tags --max-count=1))
+          latest_version=${latest_tag#v}
+          echo "::set-output name=latest_version::$latest_version"
+        shell: bash
+
+      - name: Get pull request number
+        id: get_pull_request_number
+        run: echo "::set-output name=pull_request_number::${{ github.event.number }}"
+
+      - name: Update Changelog
+        uses: stefanzweifel/changelog-updater-action@v1
+        with:
+          path-to-changelog: CHANGELOG.md
+          latest-version: ${{ steps.get_latest_version.outputs.latest_version }}
+          release-notes: |
+            This was a DEPENDABOT dependency update to pull request: [#${{ steps.get_pull_request_number.outputs.pull_request_number }}](${{ github.event.pull_request.html_url }})
+      - name: Commit updated CHANGELOG
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          branch: main
+          commit_message: Update CHANGELOG
+          file_pattern: CHANGELOG.md
