--- a/.github/workflows/owner_auto-merge_pull_request.yml
+++ b/.github/workflows/owner_auto-merge_pull_request.yml
@@ -68,4 +68,36 @@ jobs:
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
           GITHUB_TOKEN: ${{secrets.WORKFLOW_SECRET}}
+          
+ changelog:
+   runs-on: ubuntu-latest
+   needs: [auto-merge]
+   steps:
+     - name: Checkout code
+       uses: actions/checkout@v2
+       with:
+         ref: main
+
+     - name: Install dependencies
+       run: npm install
+
+     - name: Get pull request number
+       id: get_pull_request_number
+       run: echo "::set-output name=pull_request_number::${{ github.event.number }}"
+
+     - name: Generate changelog
+       run: |
+         npx npm-changelog --stdout --tag-format="{{version}} Pull Request: #${{ steps.get_pull_request_number.outputs.pull_request_number }}" >> CHANGELOG.md
+         echo "" >> CHANGELOG.md
+         echo "This was a dependabot, automated update" >> CHANGELOG.md
+
+     - name: Commit updated changelog
+       run: |
+         git config --global user.email "john.doe@example.com"
+         git config --global user.name "John Doe"
+         git add CHANGELOG.md
+         git commit -m "chore: update changelog" --no-verify
+         git push origin main
+       env:
+         GITHUB_TOKEN: ${{ secrets.WORKFLOW_SECRET }}
  
