--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "js-yaml": "^4.1.0",
     "prettier": "^2.8.4",
     "ts-jest": "^29.0.5",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "npm-changelog": "^3.3.0"
   }
 }
