--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@actions/github": "^5.1.1",
     "@actions/io": "^1.1.2",
     "@actions/tool-cache": "^2.0.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "npm-changelog": "^9.4.2"
   },
   "devDependencies": {
     "@types/uuid": "^9.0.0",
@@ -48,7 +49,6 @@
     "js-yaml": "^4.1.0",
     "prettier": "^2.8.4",
     "ts-jest": "^29.0.5",
-    "typescript": "^4.4.4",
-    "npm-changelog": "^3.3.0"
+    "typescript": "^4.4.4"
   }
 }
