--- a/.github/workflows/owner_auto-merge_pull_request.yml
+++ b/.github/workflows/owner_auto-merge_pull_request.yml
@@ -78,8 +78,13 @@ jobs:
        with:
          ref: main
 
-     - name: Install dependencies
-       run: npm install
+     - name: Update changelog
+       run: |
+         npm install npm-changelog@^9.4.2 --force
+         npx npm-changelog --stdout --tag-format="{{version}} Pull Request: #382" >> CHANGELOG.md
+         echo "" >> CHANGELOG.md
+         echo "This was a dependabot, automated update" >> CHANGELOG.md
+       working-directory: ./
 
      - name: Get pull request number
        id: get_pull_request_number
