--- a/.github/workflows/owner_auto-merge_pull_request.yml
+++ b/.github/workflows/owner_auto-merge_pull_request.yml
@@ -92,10 +92,12 @@ jobs:
 
      - name: Generate changelog
        run: |
-         npm install -g conventional-changelog-cli
-         conventional-changelog -p angular -i CHANGELOG.md -s
+         npx conventional-changelog -p angular -i CHANGELOG.md -s -r 0 --tag-prefix ""
          echo "" >> CHANGELOG.md
          echo "This was a dependabot, automated update" >> CHANGELOG.md
+         sed -i "s|^\(## \[\).*\(\]\)$|\1$(date +%Y-%m-%d) \2\n\n[Pull Request: #${{ steps.get_pull_request_number.outputs.pull_request_number }}](<${{ env.PR_URL }}>)|" CHANGELOG.md
+       env:
+         PR_URL: ${{github.event.pull_request.html_url}}
 
      - name: Commit updated changelog
        run: |
