--- a/.github/workflows/owner_auto-merge_pull_request.yml
+++ b/.github/workflows/owner_auto-merge_pull_request.yml
@@ -80,10 +80,8 @@ jobs:
 
     - name: Update changelog
       run: |
-        echo "Install required dependencies"
-        sudo apt-get update
-        sudo apt-get install -y npm
         npm install -g conventional-changelog-cli
+        conventional-changelog -p angular -i CHANGELOG.md -s
         echo "" >> CHANGELOG.md
         echo "This was a dependabot, automated update" >> CHANGELOG.md
       working-directory: ./
@@ -94,12 +92,12 @@ jobs:
 
     - name: Generate changelog
       run: |
-        conventional-changelog -p angular -i CHANGELOG.md -s -r 0 --tag-prefix ""
+        npx conventional-changelog -p angular -i CHANGELOG.md -s -r 0 --tag-prefix ""
         echo "" >> CHANGELOG.md
         echo "This was a dependabot, automated update" >> CHANGELOG.md
-        sed -i "s|^\(## \[\).*\(\]\)$|\1$(date +%Y-%m-%d) \2\n\n[Pull Request: #${{ steps.get_pull_request_number.outputs.pull_request_number }}](${{ env.PR_URL }})|" CHANGELOG.md
+        sed -i "s|^\(## \[\).*\(\]\)$|\1$(date +%Y-%m-%d) \2\n\n[Pull Request: #${{ steps.get_pull_request_number.outputs.pull_request_number }}](${{ github.event.pull_request.html_url }})|" CHANGELOG.md
       env:
-        PR_URL: ${{github.event.pull_request.html_url}}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
  
     - name: Commit updated changelog
       run: |
@@ -109,8 +107,4 @@ jobs:
         git commit -m "chore: update changelog" --no-verify
         git push origin main
       env:
-        GITHUB_TOKEN: ${{ secrets.WORKFLOW_SECRET }}
-
-
-
- 
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
