--- a/.github/workflows/owner_auto-merge_pull_request.yml
+++ b/.github/workflows/owner_auto-merge_pull_request.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Generate changelog
         run: |
-          npx conventional-changelog -p angular -i CHANGELOG.md -s -r 0 --tag-prefix ""
+          npx conventional-changelog-cli -p angular -i CHANGELOG.md -s -r 0 --tag-prefix ""
           echo "" >> CHANGELOG.md
           echo "This was a dependabot, automated update" >> CHANGELOG.md
           sed -i "s|^\(## \[\).*\(\]\)$|\1$(date +%Y-%m-%d) \2\n\n[Pull Request: #${{ steps.get_pull_request_number.outputs.pull_request_number }}](${{ env.PR_URL }})|" CHANGELOG.md
