--- a/changelog_enforcer_template.yml
+++ b/changelog_enforcer_template.yml
@@ -1,5 +1,5 @@
 name: "Update Changelog"
-
+# great for using with releases 
 on:
   pull_request:
     types: [opened, reopened, synchronize, labeled, unlabeled]
