--- a/.github/workflows/python_check.yml
+++ b/.github/workflows/python_check.yml
@@ -3,9 +3,8 @@ name: Python Action
 
 on:
   schedule:
-    - cron: "0 0 * * *" 
-    - cron: "0 12 * * *"
-    # run daily at midnight 
+  - cron: '0 0,12 * * *' 
+    # action will run everyday at 12 am and 12 pm
 
 # on:
   # push:
