--- a/.github/workflows/owner_auto-merge_pull_request.yml
+++ b/.github/workflows/owner_auto-merge_pull_request.yml
@@ -9,7 +9,7 @@ permissions:
 jobs:             
  auto-merge:
     runs-on: ubuntu-latest
-    if: ${{ github.actor == 'geo4u' }}
+    if: ${{ github.actor == 'jge162' }}
     steps:
       - name: Auto_merge
         uses: jge162/Action-workflows@main
