--- a/.github/workflows/owner_auto-merge_pull_request.yml
+++ b/.github/workflows/owner_auto-merge_pull_request.yml
@@ -57,7 +57,7 @@ jobs:
  auto-merge:
     runs-on: ubuntu-latest
     if: ${{ github.actor == 'jge162' }}
-    needs: [Python-analyze, Javascript-analyze]
+    needs: [Javascript-analyze]
     steps:
       - name: Auto_merge
         uses: jge162/Action-workflows@main
