--- a/.github/workflows/python_check.yml
+++ b/.github/workflows/python_check.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: jge162/Action-workflows@main
+      uses: actions/checkout@v2
 
     - run: |
        echo "Install required dependencies"
