--- a/.github/workflows/owner_auto-merge_pull_request.yml
+++ b/.github/workflows/owner_auto-merge_pull_request.yml
@@ -23,16 +23,12 @@ jobs:
           PR_URL: ${{github.event.pull_request.html_url}}
           GITHUB_TOKEN: ${{secrets.WORKFLOW_SECRET}}
 
-  build:
+  
+  update-changelog:
     runs-on: ubuntu-latest
     needs: [auto-merge]
-    
     permissions:
-      # Give the default GITHUB_TOKEN write permission to commit and push the
-      # updated CHANGELOG back to the repository.
-      # https://github.blog/changelog/2023-02-02-github-actions-updating-the-default-github_token-permissions-to-read-only/
       contents: write
-    
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -43,20 +39,23 @@ jobs:
         id: get_pull_request_number
         run: echo "::set-output name=pull_request_number::${{ github.event.number }}"
 
-
       - name: Run Changelog CI
         uses: saadmk11/changelog-ci@v1.1.1
         with:
-          path-to-changelog: CHANGELOG.md
+          changelog_filename: CHANGELOG.md
+          release_version: ${{ github.event.pull_request.head.ref }}
+          committer_username: "Your Username"
+          committer_email: "your.email@example.com"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           release-notes: |
             Pull request number for the release is: [#${{ steps.get_pull_request_number.outputs.pull_request_number }}](${{ github.event.pull_request.html_url }})
 
       - name: Commit updated CHANGELOG
-        uses: saadmk11/changelog-ci@v1.1.1
-        with:
-          branch: main
-          commit_message: Update CHANGELOG
-          file_pattern: CHANGELOG.md
-
-
-  
+        run: |
+          git config --global user.email "mailto:daubers_heights.0h@icloud.com"
+          git config --global user.name "Jeremy Escobar"
+          git add CHANGELOG.md
+          git commit -m "chore: update CHANGELOG" --no-verify
+          git push origin main
+        env:
+          GITHUB_TOKEN: ${{ secrets.WORKFLOW_SECRET }}
