--- a/.github/workflows/owner_auto-merge_pull_request.yml
+++ b/.github/workflows/owner_auto-merge_pull_request.yml
@@ -46,7 +46,7 @@ jobs:
           release_version: ${{ github.event.pull_request.head.ref }}
           committer_username: "Your Username"
           committer_email: "your.email@example.com"
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.WORKFLOW_SECRET }}
           release-notes: |
             Pull request number for the release is: [#${{ steps.get_pull_request_number.outputs.pull_request_number }}](${{ github.event.pull_request.html_url }})
 
