--- a/.github/workflows/owner_auto-merge_pull_request.yml
+++ b/.github/workflows/owner_auto-merge_pull_request.yml
@@ -56,6 +56,6 @@ jobs:
           git config --global user.name "Jeremy Escobar"
           git add CHANGELOG.md
           git commit -m "chore: update CHANGELOG" --no-verify
-          git push origin main
+          git push origin HEAD:main
         env:
           GITHUB_TOKEN: ${{ secrets.WORKFLOW_SECRET }}
