--- a/.github/workflows/owner_auto-merge_pull_request.yml
+++ b/.github/workflows/owner_auto-merge_pull_request.yml
@@ -47,7 +47,8 @@ jobs:
           committer_username: "Jeremy Escobar"
           committer_email: "${{ secrets.Email }}"
           github_token: ${{ secrets.WORKFLOW_SECRET }}
-          [#${{ steps.get_pull_request_number.outputs.pull_request_number }}](${{ github.event.pull_request.html_url }})
+          release-notes: |
+            Pull request number for the release is: [#${{ steps.get_pull_request_number.outputs.pull_request_number }}](${{ github.event.pull_request.html_url }})
 
       - name: Commit updated CHANGELOG
         run: |
