--- a/.github/workflows/periodic_pull_request.yml
+++ b/.github/workflows/periodic_pull_request.yml
@@ -1,9 +1,9 @@
 name: create-pull-request workflow
 on:
   schedule:
-  #- cron: '0 0,12 * * *' 
-  - cron: '0 */8 * * *'
-    # action will run everyday at 12 am and 12 pm
+  - cron: '0 0,12 * * *' 
+  #- cron: '0 */8 * * *'
+  # action will run everyday at 12 am and 12 pm
   workflow_dispatch:
 
 jobs:
