--- a/.github/workflows/python_check.yml
+++ b/.github/workflows/python_check.yml
@@ -16,8 +16,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+   # - name: Checkout repository
+     # uses: actions/checkout@v2
+
+    - name: Python Action
+      uses: jge162/Action-workflows@1.0.1
+
 
     - run: |
        echo "Install required dependencies"
