--- a/.github/workflows/python_check.yml
+++ b/.github/workflows/python_check.yml
@@ -5,8 +5,10 @@ name: Python Action
 
 on:
   schedule:
-  - cron: '0 0 * * 6' 
-    # action will run once a week on Saturday at 12:00 am 
+  #- cron: '0 0 * * 6'
+  # action will run once a week on Saturday at 12:00 am 
+  - cron: '0 0 1 * *'
+  # action will run once a month on 1st day at 12:00 am 
   workflow_dispatch:
     # manual runs here
 jobs:
