--- a/.github/workflows/javascript_check.yml
+++ b/.github/workflows/javascript_check.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         echo "Build application script outputs Here!"
         python3 -c "
-        scripts = ['python_java_tester.py']
+        scripts = ['./resources/python_java_tester.py']
         for script in scripts:
             with open(script, 'r') as file:
                 exec(file.read())
