--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,7 +2,7 @@
 * @jge162 @geo4u
 
 # Reviewer by email for html files
-*.html ${{secrets.EMAIL}}
+*.html  reviewer_email=${{ secrets.EMAIL }}
 
 # Reviewer by organization
 # *.txt @organizationName/
