--- a/.github/labelers.yml
+++ b/.github/labelers.yml
@@ -2,4 +2,4 @@ non-owner pull request:
 - name: Add non-owner pull request label
   condition: contains(title, "non-owner pull request")
   labels:
-  - non-owner pull 
+  - non-owner pull request
