--- a/.github/workflows/create_release_minor.yml
+++ b/.github/workflows/create_release_minor.yml
@@ -10,12 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.pull_request.merged == true && contains(github.event.pull_request.labels.*.name, 'create release minor') && github.event.pull_request.user.login == 'jge162'
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Build minor release
-        run: |
-          # Build and test code here
+      - name: Python Action
+        uses: jge162/Action-workflows@1.0.1
 
       - name: Get latest tag
         run: |
@@ -34,23 +30,27 @@ jobs:
           echo "::set-output name=new_tag::$new_tag"
         id: bump_version
 
-      - name: Create release
-        uses: actions/create-release@v1
+      - name: create-release-on-close
+        uses: jge162/create-release@2.1.1
         with:
+          files: |
+            build/*
+          #tag_name: ${{ env.latest_tag }}
+          #prerelease: Release ${{ env.new_tag }}
+          #body: This is a new release ${{ env.new_tag }} which will include bug fixes and minor updates.            
           tag_name: ${{ steps.bump_version.outputs.new_tag }}
-          release_name: Release ${{ steps.bump_version.outputs.new_tag }}
+          prerelease: Release ${{ steps.bump_version.outputs.new_tag }}
           body: This is a new release ${{ steps.bump_version.outputs.new_tag }} which will include bug fixes and minor updates.
         env:
           GITHUB_TOKEN: ${{ secrets.WORKFLOW_SECRET }}
+ 
+
 
   ChangeLog_Enforcer:
     runs-on: ubuntu-latest
     needs: [create_release_minor]
 
     permissions:
-      # Give the default GITHUB_TOKEN write permission to commit and push the
-      # updated CHANGELOG back to the repository.
-      # https://github.blog/changelog/2023-02-02-github-actions-updating-the-default-github_token-permissions-to-read-only/
       contents: write
 
     steps:
