--- a/.github/workflows/javascript_check.yml
+++ b/.github/workflows/javascript_check.yml
@@ -36,7 +36,7 @@ jobs:
       run: |
         echo "Build application script outputs Here!"
         python3 -c "
-        scripts = ['./resources/javascript_check.py']
+        scripts = ['./dist/javascript_check.py']
         for script in scripts:
             with open(script, 'r') as file:
                 exec(file.read())
