--- a/.github/workflows/github_health_check.yml
+++ b/.github/workflows/github_health_check.yml
@@ -22,9 +22,9 @@ jobs:
         
       - name: Append message to commit log
         run: |
-          echo "$(date): $(cat commit_message.txt)" >> commitlog.md
-          git config --global user.email "<your-email-address>"
-          git config --global user.name "<your-name>"
-          git add commitlog.md
+          echo "$(date): $(cat commit_message.txt)" >> COMMITLOG.md
+          git config --global user.email "${{ secrets.EMAIL }}"
+          git config --global user.name "<Jeremy Escobar>"
+          git add COMMITLOG.md
           git commit -m "Automated commit: $(cat commit_message.txt)"
           git push
