--- a/.github/workflows/github_health_check.yml
+++ b/.github/workflows/github_health_check.yml
@@ -19,7 +19,7 @@ jobs:
           
       - name: Create commit message
         run: |
-          echo -e "\n$(date): All GitHub Actions are running fine. Check the [GitHub status page](https://www.githubstatus.com/) for more information." > commit_message.txt
+          echo -e "\nAll GitHub Actions are running fine. Check the [GitHub status page](https://www.githubstatus.com/) for more information." > commit_message.txt
         
       - name: Append message to commit log
         run: |
