Update and rename github_health_check.yml to github_status.yml

--- a/.github/workflows/github_status.yml
+++ b/.github/workflows/github_status.yml
@@ -2,7 +2,7 @@ name: Daily Commit
 
 on:
   schedule:
-    - cron: '0 17 * * *'
+    - cron: '0 0,12 * * *' # Run at 12 AM and 12 PM UTC
   workflow_dispatch:
 
 jobs:
