--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -2,8 +2,8 @@ name: Mark stale issues and pull requests
 
 on:
   schedule:
-  - cron: '0 0,12 * * *' 
-    # action will run everyday at 12 am and 12 pm
+  - cron: '0 0 * * 6' 
+    # action will run once a week on Sat at 12 am
 jobs:
   stale:
     runs-on: ubuntu-latest
